# voice-to-text

./: README.md  README_en.md  main.py  pyproject.toml
voice_to_text/: __init__.py  __main__.py  audio.py  clipboard.py  config.py  history.py  logger.py  music.py  settings.py  transcriber.py  tray.py
voice_to_text/gui/: __init__.py  main_window.py  settings_dialog.py
www/: index.html
